--- a/Spotify Project.ipynb
+++ b/Spotify Project.ipynb
@@ -31,9 +31,9 @@
     "from spotipy import Spotify\n",
     "from spotipy.oauth2 import SpotifyOAuth\n",
     "\n",
-    "CLIENT_ID = '687e780575f64ee6a593619fae6bcfcd'\n",
-    "CLIENT_SECRET = '3a97726bf850445b90babb3092ffb830'\n",
-    "REDIRECT_URI = 'http://127.0.0.1:5000/callback'\n",
+    "CLIENT_ID = 'ClientID'\n",
+    "CLIENT_SECRET = 'Client Secret'\n",
+    "REDIRECT_URI = ''\n",
     "\n",
     "scope = [\"user-library-read\", \"playlist-read-private\"]\n",
     "\n",
