--- a/Spotify Project.ipynb
+++ b/Spotify Project.ipynb
@@ -24,9 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = '687e780575f64ee6a593619fae6bcfcd' #developer.spotify.com clientID\n",
-    "CLIENT_SECRET = '3a97726bf850445b90babb3092ffb830' #developer.spotify.com clientSecret\n",
-    "REDIRECT_URI = 'http://127.0.0.1:5000/callback' #developer.spotify.com Redirect URIs\n",
+    "CLIENT_ID = '' #developer.spotify.com clientID\n",
+    "CLIENT_SECRET = '' #developer.spotify.com clientSecret\n",
+    "REDIRECT_URI = '' #developer.spotify.com Redirect URIs\n",
     "\n",
     "scope = [\"user-library-read\", \"playlist-read-private\"]\n",
     "\n",
